--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hamburger-react": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet-async": "^1.1.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-tsparticles": "^1.34.0",
