--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "chokidar-cli": "^3.0.0",
     "concurrently": "^6.2.1",
     "postcss-cli": "^8.3.1",
-    "tailwindcss": "^2.2.9"
+    "tailwindcss": "^2.2.9",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
